Jump Start Changelog
====================

2.0.1 - XX/XX/XXXX
------------------

* **Updated Theme Blvd framework to 2.5.1**
* Cleaned up and optimized assets in `/framework` directory, reducing file size by 2MB.
* Added: CSS class "has-nav" to footer copyright area if Footer Navigation location has menu.
* Added: More accuracy for opacity selections.
* Fixed: Responsiveness of images with captions.
* Fixed: Awkward spacing of captions on slider captions; now vertically centered.
* Fixed: Incorrect file permissions of files at `/framework/assets/svg/` for those uploading the theme manually outside of WordPress.
* Fixed: System for generating FontAwesome icon selections in admin.
* Updated Bootstrap to 3.3.5.
* Updated FontAwesome to 4.4.

--------------------------------------------------------------

2.0.0 - 07/09/2015
------------------

* **Updated Theme Blvd framework to 2.5.0**
* New: Support for tons of new elments and enhancements in [Layout Builder 2.0](https://wordpress.org/plugins/theme-blvd-layout-builder/changelog/) update.
* New: Complete frontend theme re-design.
* New: "Theme Base" system at *Appearance > Theme Base*, allows you to configure different designs and options within the theme.
* New: Post format support.
* New: Mega menus, configured from *Appearance > Menus*.
* New: Frontend sticky menu.
* New: Frontend "Scroll to Top" button.
* New: Frontend floating search box.
* New: Frontend social icons.
* New: Share icons to single posts.
* New: Related posts display to single posts.
* New: "Author Box" for author archives and single posts, configured from user profile admin page.
* New: Code syntax highlighting to "Custom CSS" options.
* New: [WooCommerce](http://wordpress.org/plugins/woocommerce) support, Theme Blvd WooCommerce patch plugin no longer needed.
* New: [WPML](http://themeblvd.com/links/wpml) support, Theme Blvd WPML bridge plugin no longer needed.
* New: [Gravity Forms](http://themeblvd.com/links/gforms) support.